<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onButtonClicked"
        android:padding="10dp"
        android:text="@string/button"
        tools:ignore="UsingOnClickInXml" />

    <CheckBox
        android:id="@android:id/checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onCheckboxClicked"
        android:text="@string/choose_me"
        tools:ignore="UsingOnClickInXml" />

    <ToggleButton
        android:id="@android:id/toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onToggleClicked"
        android:textOff="@string/text_off"
        android:textOn="@string/text_on"
        tools:ignore="UsingOnClickInXml" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_dog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radio_dog"
            tools:ignore="UsingOnClickInXml" />

        <RadioButton
            android:id="@+id/radio_cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radio_cat"
            tools:ignore="UsingOnClickInXml" />

        <RadioButton
            android:id="@+id/radio_rabbit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radio_rabbit"
            tools:ignore="UsingOnClickInXml" />
    </RadioGroup>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/clear"
        android:onClick="onClearButtonClicked"

        tools:ignore="UsingOnClickInXml" />
</LinearLayout>